# mdserve

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cmd/mdserve/: main.go
internal/assets/: assets.go
internal/collector/: collector.go
internal/fileio/: read.go
internal/markdown/: markdown.go
internal/render/: render.go  templates.go
internal/render/templates/: index.tmpl  login.tmpl  page.tmpl  sidebar.tmpl  style.css
internal/server/: auth.go  handlers.go  server.go
scripts/: fetch-assets.ps1  fetch-assets.sh
src/mdserve/: collector.py  file.py  markdown.py  render.py  server.py
