[project]
name = "mdserve"
version = "0.1.0"
description = "Minimal HTTP server that renders .md files as HTML using Pico CSS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.10.2",
]

[project.scripts]
mdserve = "mdserve.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdserve"]
